feat: ship LogInsight Analyzer v4 release hardening
Backend
- range-aware Command Center snapshot: windowStart/windowEnd/scope plus
  unfiltered datasetEvents, with window-scoped counts, timeline and heatmap
- observed request-trail topology from requestId adjacency with deterministic
  weight encoding, ordered groups and null-safe edges
- bounded, chronological demo replay over the loaded dataset
- catalogue defaultInput for every entry with a canonical endpoint so the
  Algorithm Lab can execute real runs
- safer error envelope, request bounds, upload limits and incident validation
- strengthened java.util scope guard over dsa/** (static, wildcard and
  fully-qualified usages)

Frontend
- shared ReplayProvider for the Command Center replay card and the replay
  screen, restartable at the selected pace
- observed topology panel with 2D SVG and CSS 2.5D depth mode, deterministic
  particles, keyboard interaction, accessible lists and reduced-motion support
- Algorithm Lab executes catalogue input and opens the created run session
- honest labelling: DEMO REPLAY, not-real-time disclosure, scope labels,
  corrected incident and metric wording, pattern links to real example text
- dataset-wide panels no longer refetch on range change

Tests and CI
- frontend Vitest suite: 24 tests across 10 files
- backend: 827 tests, 0 failures, 0 errors
- CI frontend job now runs npm test before npm run build

Docs and deployment
- Dockerfiles, nginx.conf, docker-compose.yml, .dockerignore, .env.example
- documentation synchronized to 827 backend / 24 frontend tests, with
  historical reports kept and explicitly marked as snapshots